ep7 continued
